auto-test/tests/chapter_18/valid/extra_credit/semantic_analysis/cast_union_to_void.c


union u {
    long l;
    double d;
};

int main(void) {
    union u x = {1000};
    (void) x; 
    return 0;
}