auto-test/tests/chapter_18/invalid_types/tag_resolution/conflicting_fun_param_types.c
struct s;


int foo(struct s x);

int main(void) {
    struct s;  

    
    
    int foo(struct s x);
    return 0;
}